  Fixed risk of infinite recursion if trace enabled and
    $SIG{__WARN__} was set to a code reference.
  Fixed subroutine recursion depth measurement.
  Fixed missing embedded eval source code for some older perls.
  Fixed assorted compiler warnings for various configurations.

  Changed ReadStream SUB_LINE_RANGE tag to SUB_INFO.

  Added log=F option to write trace log to a file.

  Added slowops=N option which enables profiling of potentially slow
    perl opcodes (e.g., system calls and regexs). They're treated like xsubs.
    slowops=0 disables profiling of 'slowops'
    slowops=1 puts timings into one package ("CORE::", eg CORE::sleep)
    slowops=2 (the defaut) puts timings into into the package that made the
    call, e.g., "Foo::CORE:sleep" (note the single colon).

  Added sigexit=1 option to enable a useable profile when the process
    exits due to a signals (catches INT HUP PIPE BUS SEGV by default)
    Can also do sigexit=TRAP,ABRT,SYS,... to hook specific signals.
    Thanks to Andrew Sterling Hanenkamp for the seed of this idea.

  Added forkdepth=N option to enable profiling to be turned off after N
    generations of fork().

  Added initial support for profiling PostgreSQL PL/Perl code
    via Devel::NYTProf::PgPLPerl module.

Changes to subroutine profiler:

  Rewritten. Captures more data more accurately and robustly.
  Added profiling of calls to xsubs that exit via an exception.
  Added profiling of goto &sub;
  Added recording the name of the calling subroutine to enable proper
    linking of call trees. Previously only the calling file and line
    were recorded. (This is more significant than it sounds :)
  Added docs describing how the subroutine profiler works.

Changes to nytprofhtml:

  Added interactive treemap view of package and subroutine times.
    Left-click to zoom in (drill-down) one level, right-click to zoom out.

  Added generation of GraphViz dot language files to visualize